<resources>
    <string name="app_name">Scan4Students</string>
    <string name="password">Password</string>
    <string name="user_psw_err">Wrong Username or Password</string>
    <string name="username">Username</string>
    <string name="notYetReg">Not Registered yet?</string>
    <string name="reg">Sign Up!</string>
    <string name="login">Login</string>
    <string name="app_logo">App Logo</string>
    <string name="registration">Registration</string>
    <string name="reg_yourself">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="collegeYearSubscription">College\'s Year Subscription</string>
    <string name="cameraicon"> camera icon</string>
    <string name="my_profile">Profile</string>
    <string name="my_notebooks">Notebooks</string>
    <string name="notebook_icon">notebook icon</string>
    <string name="profile_icon">profile icon</string>
    <string name="search">Search</string>
    <string name="motto">Upload and Share your notes with other users, or search for other people\'s notes. Upgrade your study!</string>
    <string name="empty_entry">Seems like you didn\'t fill all the forms…</string>
    <string name="internal_error">Ops! Something went wrong</string>
    <string name="psw_error">Password and Confirm Password don\'t match</string>
    <string name="search_error">Can\'t complete the research</string>
    <string name="looking_for">What are you looking for?</string>
    <string name="notebook">Notebook</string>
    <string name="user">User</string>
    <string name="subject">Subject: </string>
    <string name="professor">Professor: </string>
    <string name="college">College: </string>
    <string name="faculty">Faculty: </string>
    <string name="shared_notebooks">Shared Notebooks</string>
    <string name="stats">Statistics</string>
    <string name="title">Title</string>
    <string name="visibility">Visbility</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
    <string name="prof_n_sub">Professor and Subject</string>
    <string name="create_notebook">Create Notebook</string>
    <string name="wrong_credential">Wrong Username or Password</string>
    <string name="prof_sub_err">The chosen professor doesn\'t teach this subject</string>
    <string name="Notebooks">My Notebooks</string>
    <string name="statistiche">Stats</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="titolo">Title: </string>
    <string name="studente">Student: </string>
    <string name="lingua">Language: </string>
    <string name="data">Date: </string>
    <string name="immQuad">immagine quaderno</string>
    <string name="titv">titV</string>
    <string name="linv">linV</string>
    <string name="matv">matV</string>
    <string name="datav">dataV</string>
    <string name="by">" by "</string>

</resources>