<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/logo_blue"
    android:backgroundTintMode="add"
    android:foregroundTint="@color/logo_blue"
    android:foregroundTintMode="add"
    tools:context=".SearchActivity">

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="153dp"
        android:layout_height="101dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logos4s" />

    <Button
        android:id="@+id/button"
        android:layout_width="96dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/logo_blue"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="266dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:hint="@string/dots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/looking_for"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notebook" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="420dp"
        android:layout_height="379dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>