<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.CreateNotebookActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bungee"
        android:text="@string/title"
        android:textAlignment="center">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/entryTitle"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="6dp"
                android:ems="10"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="75" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/visibility"
        android:textAlignment="center">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:padding="5dp">


            <RadioGroup
                android:id="@+id/visibilityGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:checkedButton="@id/privateRadio"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/privateRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_" />

                <RadioButton
                    android:id="@+id/publicRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_" />

            </RadioGroup>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/prof_n_sub"
        android:textAlignment="center">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Spinner
                android:id="@+id/profSpinner"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true" />

            <Spinner

                android:id="@+id/subSpinner"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/profSpinner" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/createBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_notebook" />

</LinearLayout>
