<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.UserProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@color/white"
        android:padding="20dp">

        <ImageView
            android:id="@+id/proPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/logos4s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/proPic"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:text="@string/username"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proPic" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/logo_blue"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/mynotebook_icon" />

                <TextView
                    android:fontFamily="@font/bungee"
                    android:id="@+id/notebookLabel"
                    android:includeFontPadding="false"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/notebookDesc"
                    android:includeFontPadding="false"
                    android:layout_below="@id/notebookLabel"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/shared_notebooks"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/logo_blue"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/black_profile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/black_profile_icon" />

                <TextView
                    android:id="@+id/name_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/black_profile"
                    android:paddingTop="10dp"
                    android:includeFontPadding="false"
                    android:text="Francesco Dalena"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/birthday_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/name_surname"
                    android:paddingTop="10dp"
                    android:includeFontPadding="false"
                    android:text="30/11/1999"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/college_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/birthday_text"
                    android:paddingTop="10dp"
                    android:includeFontPadding="false"
                    android:text="Uniroma2"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/statsBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/stats">

    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/notebooksBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/my_notebooks">

    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeB"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="Home">

    </com.google.android.material.button.MaterialButton>


</LinearLayout>